fixed frame jumping

--- a/src/styles/blocks/contact-us.scss
+++ b/src/styles/blocks/contact-us.scss
@@ -49,13 +49,12 @@
     letter-spacing: 0.15px;
     color: $placeholder-color;
     background-color: $background-color;
-    border: 1px solid transparent;
+    border: 2px solid transparent;
     outline: none;
     border-radius: 8px;
 
     &:hover {
-      border: 1px solid $hover-color;
-      border-radius: 8px;
+      border-color: $hover-color;
 
       &::placeholder {
         color: $main-color;
@@ -64,8 +63,7 @@
 
     &:active,
     &:focus {
-      border: 2px solid $button-color;
-      border-radius: 8px;
+      border-color: $button-color;
 
       &::placeholder {
         color: $main-color;
